fixes for program clubbing on mobile

--- a/app/assets/stylesheets/_program.css.scss
+++ b/app/assets/stylesheets/_program.css.scss
@@ -58,6 +58,13 @@
         }
       }
     }
+
+    .artist-name{
+      display: inline-block;
+      &:not(:first-child):before{
+        content: '/';
+      }
+    }
   }
   .location-link{
     border-bottom-color: black;
